   * mpng now can support a range in order to enable coarse-grained parallelism
     (distributed movie rendering)

   * "within" operator added to selection language

   * visible selection operator no longer hits disabled objects

   * origin, zoom, and orient now take "state" as an argument

   * eigensolve output now considered blather

   * important bug-fix on rotate and translate commands

Changes up to 0.81

   * fixed bug in bg_color API function

Changes up to 0.80

   * major bug fix to "carve" in isomesh

   * "command ?" now gives a list of arguments 

   * fix spurious bugs reading files under unix

   * added support for alternate residue id codes in secondary structure records

   * cylinders have become sausages, and...
      ...we now have flat-capped cylinders (0203)!

   * fixed duplicate logging with Run command

   * create a simple vector-based font (0203)

   * 3D text in CGOs

   * linear constraints in molecular sculpting engine

   * acetylene buidling block

Changes up to 0.79

   * internal character set

   * solid isosurface rendering algorithm: "isosurface" command

   * parser updated to handle selections like "resi 10 and (name c,n,o) and chain A"
     which lack surrounding parentheses, but which have delimiters inside

   * parser updated to handle (alt A+'') and similar constructs (previously DOA).

   * fixed ribbon & cartoon display when N-terminal atom is the CA

   * changes to support MacOSX port (0203)

   * ALIGN command

Changes up to 0.78

   * revamped Makefiles for better portability and dependency handling.

Changes up to 0.77

   * sculpting information now cached between changes to molecular structures

   * optimized sculpting for small regions of large proteins

   * FINALLY, modes for two-button mice

Changes up to 0.76

   * VDW radii adjusted.  Use "set legacy_vdw_radii=1" on start-up for old values.

   * Sculpt functionality.  Who needs gummy bears when you can have gummy molecules?
